--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">LabNegocioLibros</a>
+        <a class="navbar-brand" href="">Negocios</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,8 +24,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IngresarLibro">
+                <span class="oi oi-book" aria-hidden="true"></span> Ingresar Libro
+            </NavLink>
+        </div>
     </nav>
 </div>
+
+
+
 
 @code {
     private bool collapseNavMenu = true;
